<resources>
    <string name="app_name">RFID Improvement</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--        LOGIN SCREEN        -->
    <string name="label_login">Login</string>
    <string name="label_login_subHeader">Please login with your APO credentials</string>
    <string name="label_password_hint">Password</string>
    <string name="label_iei">PT. Indonesia Epson Industry</string>
    <string name="label_copyright_splash">Copyrights Appli Design</string>
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~   -->

    <!--        DASHBOARD SCREEN        -->
    <string name="label_welcome">Welcome To Rubic!</string>
    <string name="label_dashboard_management">Management</string>
    <string name="content_dashboard_management_1">Register new printer and</string>
    <string name="content_dashboard_management_2">also remove the old one</string>
    <string name="label_dashboard_stock_taking">Stock Taking</string>
    <string name="content_dashboard_stock_taking_1">Just scan the barcode</string>
    <string name="content_dashboard_stock_taking_2">and update the data!</string>
    <string name="label_dashboard_stock_taking_rfid">Stock Taking RFID</string>
    <string name="content_dashboard_stock_taking_rfid_1">Scan the RFID TAG and</string>
    <string name="content_dashboard_stock_taking_rfid_2">your data will updated!</string>
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~   -->

    <!--        RFID SELECT MENU SCREEN        -->
    <string name="label_title_rfid_select_menu">Select Menu</string>
    <string name="label_dashboard_pairing">Pairing Device</string>
    <string name="content_dashboad_pairing_1">Choose your RFID device</string>
    <string name="content_dashboard_pairing_2">and pair it</string>
    <string name="label_dashboard_scanning">Scanning</string>
    <string name="content_dashboard_scanning_1">Perform stock taking</string>
    <string name="content_dashboard_scanning_2">and finish your job!</string>
    <string name="label_dashboard_settings_rfid">RFID Settings</string>
    <string name="content_dashboard_settings_rfid_1">Adjust your RFID setting</string>
    <string name="content_dashboard_settings_rfid_2">such as sound and distance</string>
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~   -->


    <!--        LAYOUT EMPTY DATA SCREEN        -->
    <string name="label_empty_data_title">Data is Empty</string>
    <string name="label_empty_data_content">No data is displayed at this time</string>
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~   -->

    <string name="label_header_content_dialog_logout1">Are you sure</string>
    <string name="label_header_content_dialog_logout2">Logout?</string>

    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="progress">Progress</string>
    <string name="not_yet">Not yet</string>

    <string name="label_kode">code</string>
</resources>