<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_rounded_btn_gradient_gray"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_home">

        <FrameLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/lToolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <TextView
                android:id="@+id/tv_main_welcome"
                android:fontFamily="@font/open_sans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin15"
                android:layout_marginRight="@dimen/margin15"
                android:layout_gravity="center"
                android:text="@string/label_title_rfid_select_menu"
                android:textColor="@color/white"
                android:textSize="@dimen/text_semi_large"
                tools:ignore="MissingPrefix"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back" android:layout_gravity="center|start"
                android:background="?selectableItemBackgroundBorderless"
                android:padding="@dimen/margin5"
                android:layout_marginStart="8dp"/>
        </FrameLayout>
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="75dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin45"
                android:layoutAnimation="@anim/layout_animation_list_load">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_select_menu_pairing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin15"
                    android:layout_marginRight="@dimen/margin15"
                    android:layout_marginBottom="@dimen/margin10"
                    android:foreground="?selectableItemBackground"
                    app:cardCornerRadius="@dimen/margin5"
                    app:cardElevation="@dimen/margin3">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin20"
                                android:layout_marginTop="@dimen/margin25"
                                android:fontFamily="@font/open_sans_semibold"
                                android:text="@string/label_dashboard_pairing"
                                android:textColor="@color/color_black_tv_title_item_home"
                                android:textSize="@dimen/text_semi_medium"
                                tools:ignore="MissingPrefix" />


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin20"
                                android:layout_marginTop="@dimen/margin10"
                                android:fontFamily="@font/open_sans"
                                android:text="@string/content_dashboad_pairing_1"
                                android:textColor="@color/color_tv_gray_tv_desc_item_home"
                                android:textSize="@dimen/text_small_default"
                                tools:ignore="MissingPrefix" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin20"
                                android:layout_marginBottom="@dimen/margin25"
                                android:fontFamily="@font/open_sans"
                                android:text="@string/content_dashboard_pairing_2"
                                android:textColor="@color/color_tv_gray_tv_desc_item_home"
                                android:textSize="@dimen/text_small_default"
                                tools:ignore="MissingPrefix" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_list_home"
                            android:gravity="center">


                            <ImageView
                                android:layout_width="@dimen/margin100"
                                android:layout_height="match_parent"
                                android:src="@drawable/baseline_list_custom" />


                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_select_menu_scanning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin15"
                    android:layout_marginTop="@dimen/margin10"
                    android:layout_marginRight="@dimen/margin15"
                    android:layout_marginBottom="@dimen/margin10"
                    android:foreground="?selectableItemBackground"
                    app:cardCornerRadius="@dimen/margin5"
                    app:cardElevation="@dimen/margin3">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin20"
                                android:layout_marginTop="@dimen/margin25"
                                android:fontFamily="@font/open_sans_semibold"
                                android:text="@string/label_dashboard_scanning"
                                android:textColor="@color/color_black_tv_title_item_home"
                                android:textSize="@dimen/text_semi_medium"
                                tools:ignore="MissingPrefix" />


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin20"
                                android:layout_marginTop="@dimen/margin10"
                                android:fontFamily="@font/open_sans"
                                android:text="@string/content_dashboard_scanning_1"
                                android:textColor="@color/color_tv_gray_tv_desc_item_home"
                                android:textSize="@dimen/text_small_default"
                                tools:ignore="MissingPrefix" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin20"
                                android:layout_marginBottom="@dimen/margin25"
                                android:fontFamily="@font/open_sans"
                                android:text="@string/content_dashboard_scanning_2"
                                android:textColor="@color/color_tv_gray_tv_desc_item_home"
                                android:textSize="@dimen/text_small_default"
                                tools:ignore="MissingPrefix" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_list_home"
                            android:gravity="center">


                            <ImageView
                                android:layout_width="@dimen/margin100"
                                android:layout_height="match_parent"
                                android:src="@drawable/baseline_nfc_custom" />


                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>


                <!--                created by Darius 22120005-->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_select_menu_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin15"
                    android:layout_marginTop="@dimen/margin10"
                    android:layout_marginRight="@dimen/margin15"
                    android:layout_marginBottom="@dimen/margin10"
                    android:foreground="?selectableItemBackground"
                    app:cardCornerRadius="@dimen/margin5"
                    app:cardElevation="@dimen/margin3">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin20"
                                android:layout_marginTop="@dimen/margin25"
                                android:fontFamily="@font/open_sans_semibold"
                                android:text="@string/label_dashboard_settings_rfid"
                                android:textColor="@color/color_black_tv_title_item_home"
                                android:textSize="@dimen/text_semi_medium"
                                tools:ignore="MissingPrefix" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin20"
                                android:layout_marginTop="@dimen/margin10"
                                android:fontFamily="@font/open_sans"
                                android:text="@string/content_dashboard_settings_rfid_1"
                                android:textColor="@color/color_tv_gray_tv_desc_item_home"
                                android:textSize="@dimen/text_small_default"
                                tools:ignore="MissingPrefix" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin20"
                                android:layout_marginBottom="@dimen/margin25"
                                android:fontFamily="@font/open_sans"
                                android:text="@string/content_dashboard_settings_rfid_2"
                                android:textColor="@color/color_tv_gray_tv_desc_item_home"
                                android:textSize="@dimen/text_small_default"
                                tools:ignore="MissingPrefix" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_list_home"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="@dimen/margin100"
                                android:layout_height="match_parent"
                                android:src="@drawable/baseline_settings_custom" />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <!--                End of Implementation-->

            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</RelativeLayout>